# ing1-quoridor-2024-groupeTD16-NRM

./: Affichage.c  AffichageHistorique.c  AffichageHistorique.h  Barriere.c  Barrierepose.c  Barrierepose.h  CMakeLists.txt  Conversion.c  DeplacementPion.c  DeplacementPion.h  Deplacementregles.c  Deplacementregles.h  GestionPartie.c  GestionPartie.h  Joueur.c  MAINN.c  MAINN.h  Pseudo  Sauvegarde.c  Timer.c  deplacement.c  gestionTour.c  gestionTour.h  header.h  main.c  menu  plateau.c  plateau.h  pseudo.c  pseudo.c.html  pseudo.h.  pseudo.h.html  sauvegardePartie.c  tableauex.c  tableauex.h
AffichageHistorique/: AffichageHistorique.c  AffichageHistorique.h  CMakeLists.txt  main.c
DeplacementPion/: CMakeLists.txt  DeplacementPion.c  DeplacementPion.h  main.c
Deplacementregles/: CMakeLists.txt  Deplacementregles.c  Deplacementregles.h  main.c
MAIN/: CMakeLists.txt  MAINN.c  MAINN.h  main.c
barrierepose/: CMakeLists.txt  barrierepose.c  barrierepose.h  main.c
gestionPartie/:  GestionPartie .c   GestionPartie .h  main.c
gestionTour/: CMakeLists.txt  gestionTour.c  gestionTour.h  main.c
